- If the mouse moves while the scrollbar thumb is incrementing toward it (after a click and hold), update the destination point so it doesn't go past the mouse if it moves closer, and chases the mouse if it moves further away (bug 153946). - Cache the scrollbar prefs so they aren't constantly looked up. - Minor cleanup.

r+sr=roc