layout/xul/base/src/nsSliderFrame.h
@@ -167,22 +167,22 @@ public:
                    nsFramePaintLayer    aWhichLayer,
                    PRUint32             aFlags = 0);
  
-    NS_IMETHOD AttributeChanged(nsIPresContext* aPresContext,
+  NS_IMETHOD AttributeChanged(nsIPresContext* aPresContext,
                               nsIContent* aChild,
                               PRInt32 aNameSpaceID,
                               nsIAtom* aAttribute,
                               PRInt32 aModType);
 
-    virtual nsresult CurrentPositionChanged(nsIPresContext* aPresContext);
+  virtual nsresult CurrentPositionChanged(nsIPresContext* aPresContext);
 
-     NS_IMETHOD  Init(nsIPresContext*  aPresContext,
+  NS_IMETHOD  Init(nsIPresContext*  aPresContext,
                    nsIContent*      aContent,
                    nsIFrame*        aParent,
                    nsStyleContext*  aContext,
                    nsIFrame*        asPrevInFlow);
 
 
-   NS_IMETHOD HandleEvent(nsIPresContext* aPresContext, 
+  NS_IMETHOD HandleEvent(nsIPresContext* aPresContext, 
                          nsGUIEvent* aEvent,
                          nsEventStatus* aEventStatus);
 
@@ -191,7 +191,7 @@ public:
                               nsFramePaintLayer aWhichLayer,    
                               nsIFrame**     aFrame);
 
-    NS_IMETHOD SetInitialChildList(nsIPresContext* aPresContext,
+  NS_IMETHOD SetInitialChildList(nsIPresContext* aPresContext,
                                  nsIAtom*        aListName,
                                  nsIFrame*       aChildList);
 
@@ -245,16 +245,17 @@ private:
   nscoord mThumbStart;
 
   PRInt32 mCurPos;
-  PRBool mMiddlePref;
-  PRInt32 mSnapMultiplier;
 
   nsIScrollbarListener* mScrollbarListener;
 
   nscoord mChange;
-  nsPoint mClickPoint;
-  PRBool mRedrawImmediate;
+  nsPoint mDestinationPoint;
   nsSliderMediator* mMediator;
 
+  PRPackedBool mRedrawImmediate;
+
+  static PRBool gMiddlePref;
+  static PRInt32 gSnapMultiplier;
 }; // class nsSliderFrame
 
 #endif
